--- a/VS_minker_AntiTheftAlarm2/app/src/main/AndroidManifest.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
 
         </activity>
         <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
-        <uses-feature android:name="android.hardware.sensor.gyroscope" android:required="true" />
-        <service android:name="ch.ethz.inf.vs.minker.vs_minker_antitheftalarm.AntiTheftService"></service>
+        <service android:name="ch.ethz.inf.vs.minker.vs_minker_antitheftalarm.AntiTheftService"/>
     </application>
 
 </manifest>
