--- a/VS_minker_AntiTheftAlarm2/app/src/main/AndroidManifest.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
         </activity>
         <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+        <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
         <service android:name="ch.ethz.inf.vs.minker.vs_minker_antitheftalarm.AntiTheftService"/>
     </application>
 
