--- a/VS_minker_AntiTheftAlarm2/app/src/main/AndroidManifest.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ch.ethz.inf.vs.minker.vs_minker_antitheftalarm">
+          package="ch.ethz.inf.vs.a1.minker.antitheft">
 
     <application
             android:allowBackup="true"
@@ -9,19 +9,19 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:launchMode="singleTask">
+        <activity android:name="ch.ethz.inf.vs.a1.minker.antitheft.MainActivity" android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SettingActivity">
+        <activity android:name="ch.ethz.inf.vs.a1.minker.antitheft.SettingActivity">
 
         </activity>
         <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
         <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-        <service android:name="ch.ethz.inf.vs.minker.vs_minker_antitheftalarm.AntiTheftService"/>
+        <service android:name="ch.ethz.inf.vs.a1.minker.antitheft.AntiTheftService"/>
     </application>
 
 </manifest>
