importing my files into this project

--- a/Ex2/Webservices/app/src/main/AndroidManifest.xml
+++ b/Ex2/Webservices/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".TemperatureSensorActivity"></activity>
+
+        <activity android:name=".Task2Activity"></activity>
     </application>
 
 </manifest>
