--- a/Ex2/Webservices/app/build.gradle
+++ b/Ex2/Webservices/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile files('./src/main/libs/ksoap2-android-assembly-3.0.0-jar-with-dependencies.jar')
     testCompile 'junit:junit:4.12'
 }
