--- a/Ex2/Webservices/app/src/main/AndroidManifest.xml
+++ b/Ex2/Webservices/app/src/main/AndroidManifest.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ch.ethz.inf.vs.a2.minker">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,9 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TemperatureSensorActivity"></activity>
-
-        <activity android:name=".Task2Activity"></activity>
+        <activity android:name=".TemperatureSensorActivity" />
+        <activity android:name=".Task2Activity" />
+        <activity android:name=".RESTServerActivity" />
+        <service android:name=".RESTServerService" />
     </application>
 
 </manifest>
